afastamento do botão no forms

--- a/Bootstrap_PW-main/bootstrap/index.html
+++ b/Bootstrap_PW-main/bootstrap/index.html
@@ -76,12 +76,12 @@
             <div class="form-group">
                 <input type="text" class="form-control mt-2" placeholder="Digite seu @Email para contatos e newsletter do jogo!">
                 <input type="text" class="form-control mt-2" placeholder="Digite a sua mensagem!">
-                <input type="button" class="btn btn-primary" value="Enviar">
+                <input type="button" class="btn btn-primary mt-3" value="Enviar"> <!-- Adicionada a classe mt-3 para espaçamento -->
             </div>
         </section>
     </header>
 
-    <footer class="text-center">
+    <footer class="text-center bg-light py-3"> <!-- Adicionadas classes bg-light e py-3 -->
         <div id="copyright">
             Desenvolvido por <a href="https://github.com/JhonataOvirowa" target="_blank">@Jhonata</a>
             and <a href="https://github.com/MauricioSts" target="_blank">@Mauricio</a>.
