--- a/Bootstrap_PW-main/bootstrap/index.html
+++ b/Bootstrap_PW-main/bootstrap/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="/Bootstrap_PW-main/bootstrap/scroll.css">
     <style>
         .custom-card {
-            max-width: 200px; /* Ajuste a largura máxima conforme necessário */
-            margin: auto; /* Centraliza o card */
+            max-width: 200px;
+            margin: auto;
         }
     </style>
     <title>Deltarune</title>
@@ -40,9 +40,9 @@
         <section id="personagens" class="mb-5">
             <h2>Personagens</h2>
             <p>Aqui temos 3 personagens de Deltarune</p>
-            <div class="row justify-content-center"> <!-- Adicionada a classe justify-content-center -->
-                <div class="col-md-3"> <!-- Ajuste a largura para col-md-3 -->
-                    <div class="card mb-4 custom-card"> <!-- Adicionada a classe custom-card -->
+            <div class="row justify-content-center"> 
+                <div class="col-md-3">
+                    <div class="card mb-4 custom-card"> 
                         <img src="/Bootstrap_PW-main/bootstrap/Susie_battle_idle.webp" class="card-img-top" alt="Susie">
                         <div class="card-body">
                             <h5 class="card-title">Susie</h5>
@@ -50,8 +50,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3"> <!-- Ajuste a largura para col-md-3 -->
-                    <div class="card mb-4 custom-card"> <!-- Adicionada a classe custom-card -->
+                <div class="col-md-3"> 
+                    <div class="card mb-4 custom-card"> 
                         <img src="/Bootstrap_PW-main/bootstrap/Ralsei.webp" class="card-img-top" alt="Ralsei">
                         <div class="card-body">
                             <h5 class="card-title">Ralsei</h5>
@@ -59,8 +59,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3"> <!-- Ajuste a largura para col-md-3 -->
-                    <div class="card mb-4 custom-card"> <!-- Adicionada a classe custom-card -->
+                <div class="col-md-3">
+                    <div class="card mb-4 custom-card"> 
                         <img src="/Bootstrap_PW-main/bootstrap/Kris_Chapter_1_End.webp" class="card-img-top" alt="Kris">
                         <div class="card-body">
                             <h5 class="card-title">Kris</h5>
@@ -76,12 +76,12 @@
             <div class="form-group">
                 <input type="text" class="form-control mt-2" placeholder="Digite seu @Email para contatos e newsletter do jogo!">
                 <input type="text" class="form-control mt-2" placeholder="Digite a sua mensagem!">
-                <input type="button" class="btn btn-primary mt-3" value="Enviar"> <!-- Adicionada a classe mt-3 para espaçamento -->
+                <input type="button" class="btn btn-primary mt-3" value="Enviar"> 
             </div>
         </section>
     </header>
 
-    <footer class="text-center bg-light py-3"> <!-- Adicionadas classes bg-light e py-3 -->
+    <footer class="text-center bg-light py-3"> 
         <div id="copyright">
             Desenvolvido por <a href="https://github.com/JhonataOvirowa" target="_blank">@Jhonata</a>
             and <a href="https://github.com/MauricioSts" target="_blank">@Mauricio</a>.
