--- a/Bootstrap_PW-main/bootstrap/index.html
+++ b/Bootstrap_PW-main/bootstrap/index.html
@@ -26,7 +26,7 @@
         <nav class="mb-3">
             <a href="#personagens" class="btn btn-link">Personagens</a>
             <a href="#contato" class="btn btn-link">Contato</a>
-            <a href="#sobre" class="btn btn-link">Sobre</a>
+            <a href="index2.html" class="btn btn-link">Sobre</a> 
             <a href="#jogos" class="btn btn-link">Jogos</a>
         </nav>
 
@@ -74,7 +74,7 @@
         <section id="contato" class="mb-5">
             <h2>Contato</h2>
             <div class="form-group">
-                <input type="text" class="form-control mt-2" placeholder="Digite seu @Email para contatos e newsletter do jogo!">
+                <input type="text" class="form-control mt-2" placeholder="Digite seu @Email para contato e newsletter do jogo!">
                 <input type="text" class="form-control mt-2" placeholder="Digite a sua mensagem!">
                 <input type="button" class="btn btn-primary mt-3" value="Enviar"> 
             </div>
