feito a pag 2 bem simples

--- a/Bootstrap_PW-main/bootstrap/index.html
+++ b/Bootstrap_PW-main/bootstrap/index.html
@@ -33,9 +33,7 @@
         <div class="logo mb-3">
             <img src="/Bootstrap_PW-main/bootstrap/1712320584686.jfif" alt="Logo" class="img-fluid">
         </div>
-        <p class="lead">DELTARUNE é um spin-off do jogo anterior de Fox, Undertale (cujo título é um anagrama para Deltarune), mas
-            seu ambiente "é o mesmo mundo de Undertale". Um terceiro capítulo está planejado junto aos capítulos 4 e 5,
-            mas nenhuma data de lançamento foi anunciada ainda.</p>
+        <p class="lead">DELTARUNE é um spin-off do jogo anterior de Fox.</p>
 
         <section id="personagens" class="mb-5">
             <h2>Personagens</h2>
